syntax = "proto3";
option go_package="gate_way";
package gate_way;

import "google/protobuf/any.proto";

message LoginRequest {
	string id = 1;
}

message NatsLoginRequest {
	string id = 1;
	int64 idx = 2;
}

message UserMsgReq {
	string id = 1;
	google.protobuf.Any msg = 2;
}

message UserMsgResp {
	string id = 1;
	int32 code = 2;
}
