syntax = "proto3";

import "proto/gate_way.proto";
package gateway_service;

option go_package="gateway_service";


service GatewayService {
	rpc UserMsg(gate_way.UserMsgReq) returns (gate_way.UserMsgResp);
}